dynamically join conversation based on what admin create

--- a/blocks/chat/styles.css
+++ b/blocks/chat/styles.css
@@ -107,3 +107,8 @@
     height: 50px;
     margin-left: 5px;
 }
+.block_chat #end-btn {
+    vertical-align: top;
+    height: 50px;
+    margin-left: 5px;
+}
